@@ -298,6 +298,12 @@ the default value is `MERGESHARDS` (but see the note above).
 A comma-separated list of collection names that this trigger should monitor. If not
 specified or empty all collections are monitored.
 
+`maxOps`::
+Maximum number of operations requested in a single event. This property limits the speed of
+changes in a highly dynamic situation, which may lead to more serious threshold violations,
+but it also limits the maximum load on the cluster that the large number of requested
+operations may cause. The default value is 10.
+
 Events generated by this trigger contain additional details about the shards
 that exceeded thresholds and the types of violations (upper / lower bounds, bytes / docs metrics).
 
